# fzlaunch

./: AGENTS.md  Cargo.toml  README.md  default.nix  flake.nix  fzlaunch  setup.py
contrib/: README.md  fzlaunch-recoll
design/: specs.md
modules/: entry_manager.py
modules/lib/: config.py  history.py
modules/modules/: calculator.py  files.sh  hidden.sh  modules.md  path.sh
src/: app.rs  config.rs  fuzzy.rs  history.rs  input.rs  main.rs  model.rs  preview.rs  shell.rs  sources.rs  state.rs  test_support.rs
src/sources/: calculator.rs  directories.rs  executables.rs  files.rs  filesystem.rs  mod.rs  plugin.rs
src/ui/: tui.rs
