[package]
name = "fzlaunch"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
crossterm = "0.29.0"
nucleo-matcher = "0.3.1"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
tokio = { version = "1.38.0", features = ["io-util", "macros", "process", "rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["test-util"] }
